<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
	<string name="app_name" translatable="false">Freiheitsmessenger</string>
	<string name="app_package" translatable="false">org.briarproject.briar.android</string>
	<string name="setup_title">Welcome to Freiheitsmessenger</string>
	<string name="setup_name_explanation">Your nickname will be shown next to any content you post. You can\'t change it after creating your account.</string>
	<string name="setup_next">Next</string>
	<string name="setup_password_intro">Choose a Password</string>
	<string name="setup_password_explanation">Your Freiheitsmessenger account is stored encrypted on your device, not in the cloud. If you forget your password or uninstall Freiheitsmessenger, there\'s no way to recover your account.\n\nChoose a long password that\'s hard to guess, such as four random words, or ten random letters, numbers and symbols.</string>
	<string name="setup_doze_title">Background Connections</string>
	<string name="setup_doze_intro">To receive messages, Freiheitsmessenger needs to stay connected in the background.</string>
	<string name="setup_doze_explanation">To receive messages, Freiheitsmessenger needs to stay connected in the background. Please disable battery optimizations so Freiheitsmessenger can stay connected.</string>
	<string name="setup_doze_button">Allow Connections</string>
	<string name="choose_nickname">Choose your nickname</string>
	<string name="choose_password">Choose your password</string>
	<string name="confirm_password">Confirm your password</string>
	<string name="name_too_long">Name is too long</string>
	<string name="password_too_weak">Password is too weak</string>
	<string name="passwords_do_not_match">Passwords do not match</string>
	<string name="create_account_button">Create Account</string>
	<string name="more_info">More Information</string>
	<string name="don_t_ask_again">Don\'t ask again</string>
	<string name="setup_huawei_text">Please tap the button below and make sure Freiheitsmessenger is protected in the \"Protected Apps\" screen.</string>
	<string name="setup_huawei_button">Protect Freiheitsmessenger</string>
	<string name="setup_huawei_help">If Freiheitsmessenger is not added to the protected apps list, it will be unable to run in the background.</string>
	<string name="setup_huawei_app_launch_text">Please tap the button below, open the \"App launch\" screen and make sure Freiheitsmessenger is set to \"Manage manually\".</string>
	<string name="setup_huawei_app_launch_button">Open Battery Settings</string>
	<string name="setup_huawei_app_launch_help">If Freiheitsmessenger is not set to \"Manage manually\" in the \"App launch\" screen, it will not be able to run in the background.</string>
	<string name="setup_xiaomi_text">To run in the background, Freiheitsmessenger needs to be locked to the recent apps list.</string>
	<string name="setup_xiaomi_button">Protect Freiheitsmessenger</string>
	<string name="setup_xiaomi_help">If Freiheitsmessenger is not locked to the recent apps list, it will be unable to run in the background.</string>
	<string name="setup_xiaomi_dialog_body_old">1. Open the recent apps list (also called the app switcher)\n\n2. Swipe down on the image of Freiheitsmessenger to show the padlock icon\n\n3. If the padlock is not locked, tap to lock it</string>
	<string name="setup_xiaomi_dialog_body_new">1. Open the recent apps list (also called the app switcher)\n\n2. Press and hold the image of Freiheitsmessenger until the padlock button appears\n\n3. If the padlock is not locked, tap to lock it</string>
	<string name="warning_dozed">%s was unable to run in the background</string>
	<string name="enter_password">Password</string>
	<string name="try_again">Wrong password, try again</string>
	<string name="dialog_title_cannot_check_password">Cannot Check Password</string>
	<string name="dialog_message_cannot_check_password">Freiheitsmessenger cannot check your password. Please try rebooting your device to solve this problem.</string>
	<string name="sign_in_button">Sign In</string>
	<string name="forgotten_password">I have forgotten my password</string>
	<string name="dialog_title_lost_password">Lost Password</string>
	<string name="dialog_message_lost_password">Your Freiheitsmessenger account is stored encrypted on your device, not in the cloud, so we can\'t reset your password. Would you like to delete your account and start again?\n\nCaution: Your identities, contacts and messages will be permanently lost.</string>
	<string name="startup_failed_activity_title">Freiheitsmessenger Startup Failure</string>
	<string name="startup_failed_clock_error">Freiheitsmessenger was unable to start because your device\'s clock is wrong.\n\nPlease set your device\'s clock to the right time and try again.</string>
	<string name="startup_failed_db_error">Freiheitsmessenger was unable to open the database containing your account, your contacts and your messages.\n\nPlease upgrade to the latest version of the app and try again, or set up a new account by choosing \'I have forgotten my password\' at the password prompt.</string>
	<string name="startup_failed_data_too_old_error">Your account was created with an old version of this app and cannot be opened with this version.\n\nYou must either reinstall the old version or set up a new account by choosing \'I have forgotten my password\' at the password prompt.</string>
	<string name="startup_failed_data_too_new_error">Your account was created with a newer version of this app and cannot be opened with this version.\n\nPlease upgrade to the latest version and try again.</string>
	<string name="startup_failed_service_error">Freiheitsmessenger was unable to start a required component.\n\nPlease upgrade to the latest version of the app and try again.</string>
	<plurals name="expiry_warning">
		<item quantity="one">This is a test version of Freiheitsmessenger. Your account will expire in %d day and cannot be renewed.</item>
		<item quantity="other">This is a test version of Freiheitsmessenger. Your account will expire in %d days and cannot be renewed.</item>
	</plurals>
	<string name="expiry_date_reached">This software has expired.\nThank you for testing!</string>
	<string name="download_briar">To continue using Freiheitsmessenger, please download the latest release.</string>
	<string name="create_new_account">You will need to create a new account, but you can use the same nickname.</string>
	<string name="download_briar_button">Download Latest Release</string>
	<string name="startup_open_database">Decrypting Database…</string>
	<string name="startup_migrate_database">Upgrading Database…</string>
	<string name="startup_compact_database">Compacting Database…</string>
	<string name="nav_drawer_open_description">Open the navigation drawer</string>
	<string name="nav_drawer_close_description">Close the navigation drawer</string>
	<string name="contact_list_button">Contacts</string>
	<string name="groups_button">Private Groups</string>
	<string name="forums_button">Forums</string>
	<string name="blogs_button">Blogs</string>
	<string name="lock_button">Lock App</string>
	<string name="settings_button">Settings</string>
	<string name="sign_out_button">Sign Out</string>
	<string name="transports_onboarding_text">Tap here to control how Freiheitsmessenger connects to your contacts.</string>
	<string name="transport_tor">Internet</string>
	<string name="tor_device_status_online_wifi">Your phone has Internet access via Wi-Fi</string>
	<string name="tor_device_status_online_mobile">Your phone has Internet access via mobile data</string>
	<string name="tor_device_status_offline">Your phone does not have Internet access</string>
	<string name="tor_plugin_status_enabling">Freiheitsmessenger is connecting to the Internet</string>
	<string name="tor_plugin_status_active">Freiheitsmessenger is connected to the Internet</string>
	<string name="tor_plugin_status_inactive">Freiheitsmessenger can\'t connect to the Internet</string>
	<string name="tor_plugin_status_disabled">Freiheitsmessenger is configured not to use the Internet</string>
	<string name="tor_plugin_status_disabled_mobile_data">Freiheitsmessenger is configured not to use mobile data</string>
	<string name="tor_plugin_status_disabled_battery">Freiheitsmessenger is configured not to use the Internet when running on battery</string>
	<string name="tor_plugin_status_disabled_country_blocked">Freiheitsmessenger is configured not to use the Internet in this country</string>
	<string name="transport_lan">Wi-Fi</string>
	<string name="transport_lan_long">Same Wi-Fi network</string>
	<string name="lan_device_status_on">Your phone is connected to Wi-Fi</string>
	<string name="lan_device_status_off">Your phone is not connected to Wi-Fi</string>
	<string name="lan_plugin_status_enabling">Freiheitsmessenger is connecting to the Wi-Fi network</string>
	<string name="lan_plugin_status_active">Freiheitsmessenger is connected to the Wi-Fi network</string>
	<string name="lan_plugin_status_inactive">Freiheitsmessenger can\'t connect to the Wi-Fi network</string>
	<string name="lan_plugin_status_disabled">Freiheitsmessenger is configured not to use the Wi-Fi network</string>
	<string name="transport_bt">Bluetooth</string>
	<string name="bt_device_status_on">Your phone\'s Bluetooth is turned on</string>
	<string name="bt_device_status_off">Your phone\'s Bluetooth is turned off</string>
	<string name="bt_plugin_status_enabling">Freiheitsmessenger is connecting to Bluetooth</string>
	<string name="bt_plugin_status_active">Freiheitsmessenger is connected to Bluetooth</string>
	<string name="bt_plugin_status_inactive">Freiheitsmessenger can\'t connect to Bluetooth</string>
	<string name="bt_plugin_status_disabled">Freiheitsmessenger is configured not to use Bluetooth</string>
	<string name="reminder_notification_title">Signed out of Freiheitsmessenger</string>
	<string name="reminder_notification_text">Tap to sign back in.</string>
	<string name="reminder_notification_channel_title">Freiheitsmessenger Sign-in Reminder</string>
	<string name="reminder_notification_dismiss">Dismiss</string>
	<string name="ongoing_notification_title">Signed into Freiheitsmessenger</string>
	<string name="ongoing_notification_text">Touch to open Freiheitsmessenger.</string>
	<plurals name="private_message_notification_text">
		<item quantity="one">New private message.</item>
		<item quantity="other">%d new private messages.</item>
	</plurals>
	<plurals name="group_message_notification_text">
		<item quantity="one">New group message.</item>
		<item quantity="other">%d new group messages.</item>
	</plurals>
	<plurals name="forum_post_notification_text">
		<item quantity="one">New forum post.</item>
		<item quantity="other">%d new forum posts.</item>
	</plurals>
	<plurals name="blog_post_notification_text">
		<item quantity="one">New blog post.</item>
		<item quantity="other">%d new blog posts.</item>
	</plurals>
	<string name="now">now</string>
	<string name="show">Show</string>
	<string name="hide">Hide</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="got_it">Got it</string>
	<string name="delete">Delete</string>
	<string name="accept">Accept</string>
	<string name="decline">Decline</string>
	<string name="online">Online</string>
	<string name="offline">Offline</string>
	<string name="send">Send</string>
	<string name="allow">Allow</string>
	<string name="open">Open</string>
	<string name="groups_member_list">Member List</string>
	<string name="groups_invite_members">Invite Members</string>
	<string name="groups_leave">Leave Group</string>
	<string name="groups_dissolve">Dissolve Group</string>
	<string name="groups_reveal_contacts">Reveal Contacts</string>
	<string name="menu_map">Mapview</string>
	<string name="menu_send_location">Publish location</string>
	<string name="menu_show_map_functions">Show map functions</string>
</resources>