<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<item
		android:id="@+id/share_map"
		android:icon="@drawable/social_share_white"
		android:title="@string/share_map"
		android:visible="false"
		app:showAsAction="ifRoom"
		tools:visible="true" />
	<item
		android:id="@+id/action_group_invite"
		android:icon="@drawable/invite_user"
		android:title="@string/groups_invite_members"
		android:visible="false"
		app:showAsAction="ifRoom"
		tools:visible="true" />

	<item
		android:id="@+id/action_group_member_list"
		android:icon="@drawable/ic_group_white"
		android:title="@string/groups_member_list"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_group_reveal"
		android:icon="@drawable/ic_visibility_white"
		android:title="@string/groups_reveal_contacts"
		android:visible="false"
		app:showAsAction="never"
		tools:visible="true" />

	<item
		android:id="@+id/action_group_leave"
		android:icon="@drawable/action_delete_white"
		android:title="@string/groups_leave"
		android:visible="false"
		app:showAsAction="never"
		tools:visible="true" />

	<item
		android:id="@+id/action_group_dissolve"
		android:icon="@drawable/action_delete_white"
		android:title="@string/groups_dissolve"
		android:visible="false"
		app:showAsAction="never"
		tools:visible="true" />
	<item
		android:id="@+id/action_location_share"
		android:title="@string/menu_send_location"
		android:visible="true"
		app:showAsAction="never"
		tools:visible="true" />
	<item
		android:id="@+id/action_show_map_functions"
		android:title="@string/menu_show_map_functions"
		android:visible="true"
		android:enabled="false"
		app:showAsAction="never"
		tools:visible="true" />

	<item
		android:id="@+id/action_map"
		android:title="@string/menu_map"
		android:visible="true"
		app:showAsAction="never"
		tools:visible="true" />

</menu>